<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".organizer.organizer_profile_fragment">


    <ImageView
        android:id="@+id/profile_picture_background"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/profile_edit_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/edit_icon" />

    <ImageButton
        android:id="@+id/facility_edit_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:srcCompat="@drawable/edit_icon" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="97dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/background"
        app:strokeWidth="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="FirstName LastName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/profile_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="type"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center|left"
            android:minHeight="24dip"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="email@gmail.com"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/ic_dialog_email"
            app:iconGravity="start"
            app:iconTint="@color/accent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="left|center_vertical"
            android:minHeight="24dip"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="780-xxx-xxxx"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/stat_sys_phone_call"
            app:iconGravity="start"
            app:iconTint="@color/accent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/facility_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="FirstName LastName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/facility_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center|left"
            android:minHeight="24dip"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="email@gmail.com"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/ic_dialog_email"
            app:iconGravity="start"
            app:iconTint="@color/accent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/facility_phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="left|center_vertical"
            android:minHeight="24dip"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="780-xxx-xxxx"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/stat_sys_phone_call"
            app:iconGravity="start"
            app:iconTint="@color/accent" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="ENTRANT VIEW"
        android:textColor="@color/background"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/accent"
        app:icon="@drawable/baseline_arrow_right_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>